<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/entered_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/name_placeholder"
        android:inputType="textCapWords"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_placeholder"
        android:inputType="textWebEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:textColor="@android:color/darker_gray"
        android:layout_margin="8dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <CheckBox android:id="@+id/checkbox_whippedCream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whippedCream"
            android:textSize="16sp"
            android:paddingLeft="24sp"
            android:onClick="whippedCream"/>

        <CheckBox android:id="@+id/checkbox_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:paddingLeft="24sp"
            android:onClick="chocolate"/>

</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:text="@string/quantity"
        android:textColor="@android:color/darker_gray"
        android:layout_margin="8dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <Button
        android:id="@+id/increment_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:text="-"
        android:onClick="decrement"
        />
    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_margin="8dp"
        />
    <Button
        android:id="@+id/decrement_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="+"
        android:layout_margin="8dp"
        android:onClick="increment"
        />
</LinearLayout>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_margin="8dp"
        />
    <Button
        android:id="@+id/my_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_margin="8dp"
        android:onClick="submitOrder"
        />

</LinearLayout>
</ScrollView>